[package]
name = "dynamixel2"
version = "0.9.1"
license = "BSD-2-Clause"

description = "dynamixel protocol 2.0"
keywords = ["dynamixel", "servo", "motor", "serial"]
categories = ["science::robotics"]
repository = "https://github.com/robohouse-delft/dynamixel2-rs"
readme = "README.md"

edition = "2021"
publish = ["crates-io"]

[features]
default = ["std", "serial2"]

# Enable features that require `std`.
std = ["alloc"]

# Enable support for `Vec`.
alloc = []

# Add logging statements.
log = ["dep:log"]

# Enable support for the `serial2` crate.
serial2 = ["dep:serial2"]

# Enable rs4xx support of the `serial2` crate.
rs4xx = ["serial2?/rs4xx"]

# Enable integration tests that use a real servo motor.
integration-tests = []

[dependencies]
log = { version = "0.4.8", optional = true }
serial2 = { version = "0.2.24", optional = true }

[dev-dependencies]
assert2 = "0.3.3"
env_logger = "0.11.5"
test-log = "0.2.16"
log = "0.4.8"

[workspace]
members = ["dynamixel2-cli"]
