[package]
name = "dynamixel2-cli"
version = "0.4.2"
license = "BSD-2-Clause"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"RoboHouse <robohouse@robovalley.com>",
]

description = "dynamixel protocol 2.0 command line utility"
keywords = ["dynamixel", "servo", "motor", "serial"]
categories = ["science::robotics"]
repository = "https://github.com/robohouse-delft/dynamixel2-rs"
readme = "README.md"

edition = "2018"

[dependencies]
dynamixel2 = { version = "0.4.2", path = "..", features = ["log"] }
env_logger = "0.10.0"
log = "0.4.14"
serial2 = "0.2.10"
structopt = "0.3.21"
